--- a/index.html
+++ b/index.html
@@ -114,8 +114,17 @@
       <p>
         Un test di validazione potrà essere fatto tramite il tool online <a href="#">-LINK ESTERNO-</a> dedicato allo
         scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers
-        come loro: <a href="#">-INSERIRE VIDEO YOUTUBE-</a>
+        come loro:
       </p>
+      <iframe
+        width="350"
+        height="250"
+        src="https://www.youtube.com/embed/pnNCvnlmJXg?si=1OiB489hcRm2jwu7"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </main>
 
     <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
@@ -149,7 +158,7 @@
       <p>Blog Epicode ©2023</p>
       <p>
         Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi, 2 - Milano. P.IVA 00112233
-        Info@epicode.school <a href="#">- LINK EMAIL- </a>
+        Info@epicode.school <a href="mailto:info@epicode.school">- LINK EMAIL- </a>
       </p>
     </footer>
   </body>
